--- a/EKartSolution/EKartMVCApp/Views/Customer/Contact.cshtml
+++ b/EKartSolution/EKartMVCApp/Views/Customer/Contact.cshtml
@@ -1,4 +1,4 @@
-﻿@model EKartMVCApp.Models.Contact
+@model EKartMVCApp.Models.Contact
 
 @{
     ViewBag.Title = "Contact Us";
@@ -14,6 +14,10 @@
             border-radius: 13px;
             text-wrap: normal;
         }
+
+        body {
+            background-image: url('../../Content/Backgrounds/yikrkByMT.jpg');
+        }
     </style>
 </head>
 <body>
@@ -21,45 +25,44 @@
     {
         @Html.AntiForgeryToken()
         <div class="form-horizontal">
-            <h3>Contact Us</h3>
+            <center><h3><b>Contact Us</b></h3></center>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @Value = @ViewBag.ContactFirstName, @class = "form-control" } })
+                    @*@Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })*@
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @Value = @ViewBag.ContactLastName, @class = "form-control" } })
+                    @*@Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })*@
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.EmailId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.EmailId, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.EmailId, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.EmailId, new { htmlAttributes = new { @Value = @ViewBag.ContactEmail, @class = "form-control" } })
+                    @*@Html.ValidationMessageFor(model => model.EmailId, "", new { @class = "text-danger" })*@
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @Value = @ViewBag.ContactPhone, @class = "form-control" } })
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Message, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.Message, 5, 40, new { htmlAttributes = new { @class = "form-control", placeholder = @Html.DisplayNameFor(model => model.Message) } })
+                    @Html.TextAreaFor(model => model.Message, 5, 40, new { htmlAttributes = new { @class = "form-control", @placeholder = @Html.DisplayNameFor(model => model.Message) } })
                     @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -75,7 +78,5 @@
     <div>
         <h4>@Html.ActionLink("Back to Home", "ViewCategories", "Category")</h4>
     </div>
-
-   
 </body>
 
